# v2x_cohdainterfaces

./: CMakeLists.txt  package.xml
msg/: GPS.msg  MAPEM.msg  SPATEM.msg
msg/mapem/: MapemConnectingLane.msg  MapemConnection.msg  MapemDataParameters.msg  MapemIntersection.msg  MapemLane.msg  MapemLaneAttributes.msg  MapemMapData.msg  MapemNodeList.msg  MapemPreemptPriorityData.msg  MapemReferencePoint.msg  MapemRegional.msg  MapemRemoteIntersection.msg  MapemRestriction.msg  MapemRoadSegment.msg  MapemSpeedLimit.msg  MapemUserRestriction.msg  MapemZone.msg
msg/spat/: Intersection.msg  IntersectionID.msg  ManeuverAssist.msg  SPAT.msg  SignalState.msg  Speed.msg  StateTimeSpeed.msg  Timing.msg
